--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,11 @@
     "name": "kepawni/limerick",
     "description": "A Redis-based Hexastore implementation",
     "type": "library",
+    "autoload": {
+        "psr-4": {
+            "Kepawni\\Limerick\\": "src/"
+        }
+    },
     "require": {
         "predis/predis": "^1.1"
     },
